--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .weather-render {
   display: flex;
+  column-gap: 1rem;
+  flex-direction: column;
+}
+
+@media (min-width: 1440px) {
+  .weather-render {
+    flex-direction: row;
+  }
 }
 
 .weather-day{
@@ -11,7 +19,7 @@
 .weather-card {
   border: 1px solid #000;
   min-width: 200px;
-  margin: auto;
+  max-width: 200px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
